--- a/msticpy/data/queries/netwitness/netwitness_queries.yaml
+++ b/msticpy/data/queries/netwitness/netwitness_queries.yaml
@@ -11,7 +11,9 @@ defaults:
     select_fields:
       description: Fields to select. Enter * to select all metadata
       type: string
-    where_clause: The query filter (e.g. time= '2023-10-25 00:00:00' - '2023-10-25 01:00:00' && ip.src=192.168.1.1)
+    where_clause:
+      description: The query filter (e.g. time= '2023-10-25 00:00:00' - '2023-10-25 01:00:00' && ip.src=192.168.1.1)
+      type: string
 sources:
   nwmetadata_query:
     description: Query Netwitness metadata
