--- a/msticpy/resources/mpconfig_defaults.yaml
+++ b/msticpy/resources/mpconfig_defaults.yaml
@@ -199,6 +199,11 @@ DataProviders:
       ClientId: str(required=False, format=uuid)
       # [SuppressMessage("Microsoft.Security", "CS002:SecretInNextLine", Justification="Test code")]
       ClientSecret: *cred_key_opt
+  Netwitness:
+    Args:
+      nwhost: str()
+      nwport: str()
+      nwuser: str()
 msticpy:
   FriendlyExceptions: bool(default=True, required=False)
   QueryDefinitions: list(required=False)
